--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Calliope</h1>
         <h2>Calliope provides a bridge between Cassandra and Spark framework allowing you to create those magical, realtime bigdata apps with ease!</h2>
-        <a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform" class="button"><small>Request early access</a>
+        <a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform" class="button"><small>Get Early Access</small></a>
       </div>
     </header>
 
@@ -38,7 +38,9 @@
           <p><a href="{{site.baseurl}}/casbuilder.html">CasBuilder</a></p>
           <p><a href="{{site.baseurl}}/transformers.html">Transformers</a></p>
           <p><a href="{{site.baseurl}}/troubleshooting.html">Troubleshooting</a></p>
-          <hr/>
+	  <p class="request-link"><a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform">Get Early Access</a></p>
+
+		
           <p class="repo-owner"><a href="https://github.com/tuplejump/calliope">Calliope</a> is maintained by <a href="https://github.com/tuplejump">tuplejump</a>.</p>
         </aside>
       </div>
