--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -133,6 +133,23 @@ aside#sidebar p.repo-owner a {
   font-weight: bold;
 }
 
+aside#sidebar p.repo-owner{
+   border-top: 1px solid #AAA;
+   margin-top: 5px;
+   padding-top: 10px;
+}
+
+aside#sidebar p.request-link{
+   margin-top: 5px;
+   padding-top: 20px;
+   border-top: 1px solid #AAA;
+}
+
+aside#sidebar p.request-link a{
+  font-size: 120%;
+  font-weight: bold;
+}
+
 #downloads {
   margin-bottom: 40px;
 }
@@ -157,6 +174,12 @@ header a.button {
   top: 0;
   background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
+
+header a.button small {
+  font-size: 24px;
+  margin-top: -8px;
+}
+
 aside a.button {
   width: 138px;
   padding-left: 64px;
@@ -235,9 +258,10 @@ form {
 
 #main-content h1 {
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  font-size: 26px;
+  font-size: 27px;
   letter-spacing: -1px;
   color: #474747;
+  font-weight: bold;
 } 
 
 #main-content h1:before {
@@ -328,7 +352,7 @@ p a {
 }
 
 blockquote {
-  font-size: 1.6em;
+  font-size: 14px;
   border-left: 10px solid #e9e9e9;
   margin-bottom: 20px;
   padding: 0 0 0 30px;
@@ -456,7 +480,7 @@ footer p {
     border-radius: 5px;    
   }
   header a.button small {
-    font-size: 13px;
+    font-size: 15px;
     display: inline;
   }
   #main-content,
