Adding pages to the menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,9 @@
           <p><a href="{{site.baseurl}}/show-me-the-code.html">Using the library</a></p>
           <p><a href="{{site.baseurl}}/casbuilder.html">CasBuilder</a></p>
           <p><a href="{{site.baseurl}}/transformers.html">Transformers</a></p>
+          <p><a href="{{site.baseurl}}/streaming.html">Streaming</a></p>
           <p><a href="{{site.baseurl}}/troubleshooting.html">Troubleshooting</a></p>
+          <p><a href="{{site.baseurl}}/coming-soon.html">Coming soon</a></p>
 	  <p class="request-link"><a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform">Get Early Access</a></p>
 
 		
