--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
       <div class="inner">
         <h1>Calliope</h1>
         <h2>Calliope provides a bridge between Cassandra and Spark framework allowing you to create those magical, realtime bigdata apps with ease!</h2>
-        <a href="https://github.com/tuplejump/calliope-release" class="button"><small>Download now!</small></a>
+        <!-- a href="https://github.com/tuplejump/calliope-release" class="button"><small>Download now!</small></a>
         &nbsp;        
-        <a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform" class="button"><small>Get Early Access</small></a>
+        <a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform" class="button"><small>Get Early Access</small></a -->
       </div>
     </header>
 
@@ -43,7 +43,7 @@
           <p><a href="{{site.baseurl}}/troubleshooting.html">Troubleshooting</a></p>
           <p><a href="{{site.baseurl}}/coming-soon.html">Coming soon</a></p>
 	        <p class="request-link">
-            <a href="https://github.com/tuplejump/calliope-release" class="button">Download now</a>
+            <a href="https://github.com/tuplejump/calliope-release">Get Stable Release</a>
             <a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform">Get Early Access</a>
           </p>
           <p class="repo-owner"><a href="https://github.com/tuplejump/calliope">Calliope</a> is maintained by <a href="https://github.com/tuplejump">tuplejump</a>.</p>
