--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
           <p><a href="{{site.baseurl}}/troubleshooting.html">Troubleshooting</a></p>
           <p><a href="{{site.baseurl}}/coming-soon.html">Coming soon</a></p>
 	        <p class="request-link">
-            <a href="https://github.com/tuplejump/calliope-release">Get Stable Release</a>
-            <a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform">Get Early Access</a>
+            <div><a href="https://github.com/tuplejump/calliope-release">Get Stable Release</a></div>
+            <div><a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform">Get Early Access</a></div>
           </p>
           <p class="repo-owner"><a href="https://github.com/tuplejump/calliope">Calliope</a> is maintained by <a href="https://github.com/tuplejump">tuplejump</a>.</p>
         </aside>
