Updating the links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <h2>Calliope provides a bridge between Cassandra and Spark framework allowing you to create those magical, realtime bigdata apps with ease!</h2>
         <!-- a href="https://github.com/tuplejump/calliope-release" class="button"><small>Download now!</small></a>
         &nbsp;        
-        <a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform" class="button"><small>Get Early Access</small></a -->
+        <a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform" class="button"><small>Get Early Access code</small></a -->
       </div>
     </header>
 
@@ -43,8 +43,8 @@
           <p><a href="{{site.baseurl}}/troubleshooting.html">Troubleshooting</a></p>
           <p><a href="{{site.baseurl}}/coming-soon.html">Coming soon</a></p>
 	        <p class="request-link">
-            <div><a href="https://github.com/tuplejump/calliope-release">Get Stable Release</a></div>
-            <div><a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform">Get Early Access</a></div>
+            <div><a href="https://github.com/tuplejump/calliope-release">Get the GA Release</a></div>
+            <div><a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform">Get Early Access code</a></div>
           </p>
           <p class="repo-owner"><a href="https://github.com/tuplejump/calliope">Calliope</a> is maintained by <a href="https://github.com/tuplejump">tuplejump</a>.</p>
         </aside>
