--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
             <div><a href="https://github.com/tuplejump/calliope-release">Get the GA Release</a></div>
             <div><a href="https://docs.google.com/forms/d/1jFTqKnp_13vTjXwy3Zex58X1JKRsFJLLWNhyZ9mQUDg/viewform">Get Early Access code</a></div>
           </p>
-          <p class="repo-owner"><a href="https://github.com/tuplejump/calliope">Calliope</a> is maintained by <a href="https://github.com/tuplejump">tuplejump</a>.</p>
+          <p class="repo-owner"><a href="https://github.com/tuplejump/calliope">Calliope</a> is maintained by <a href="https://github.com/tuplejump">Tuplejump, Inc</a>.</p>
         </aside>
       </div>
     </div>
