Adding snackfs documentation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,14 @@
           <p><a href="{{site.baseurl}}/casbuilder.html">CasBuilder</a></p>
           <p><a href="{{site.baseurl}}/transformers.html">Transformers</a></p>
           <p><a href="{{site.baseurl}}/streaming.html">Streaming</a></p>
+          <p>
+            <a href="{{site.baseurl}}/snackfs.html">Snack FS</a>
+            <ul class="submenu">
+              <li><a href="{{site.baseurl}}/snackfs-design.html">Design</a></li>
+              <li><a href="{{site.baseurl}}/snackfs-usage.html">Usage</a></li>
+              <li><a href="{{site.baseurl}}/snackfs-spark.html">Spark</a></li>
+            </ul>
+          </p>
           <p><a href="{{site.baseurl}}/troubleshooting.html">Troubleshooting</a></p>
           <p><a href="{{site.baseurl}}/coming-soon.html">Coming soon</a></p>
 	        <p class="request-link">
